--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,17 +3,29 @@
         <title>
             Riley's Info
         </title>
+        <link rel="stylesheet" href="./style.css">
+        <style>
+            body {
+                background-image: linear-gradient(to bottom right, white, grey);
+            }
+        </style>
     </head>
     <body>
-        <h1>Riley Washington</h1>
+        <center><h1 class="Name">Riley Washington</h1>
         <img src="https://media.licdn.com/dms/image/D4D03AQEAqtRGoqiM4g/profile-displayphoto-shrink_800_800/0/1711383312553?e=1717027200&v=beta&t=HentrgGIhW3z2j3mU1Cp9YFyCOJgXNv7jrIcbf9ghCo" width="200px">
         <br />
         <h2>Hobbies:</h2> 
-        <ul>
-            <li>working on small coding projects</li>
-            <li>making jewelry for her jewelry company</li>
-            <li>learning differnt languages</li>
-        </ul>
-        <a href="https://www.linkedin.com/in/riley-washington-349765255/" target="_blank">Here is My Linked In</a>
-    </body>
+        <div class = "container">
+            <div id = "list">
+                <ul>
+                    <li>working on small coding projects</li>
+                    <li>making jewelry for her jewelry company</li>
+                    <li>learning differnt languages</li>
+                </ul>
+            </div>
+        </div>
+        <div class = "link">
+            <a href="https://www.linkedin.com/in/riley-washington-349765255/" target="_blank">Here is My Linked In</a>
+        </div>
+    </body></center>
 </html>
